docs-archive/apache-airflow-providers-snowflake/6.16.1/_sources/_api/airflow/providers/snowflake/operators/snowflake/index.rst.txt
airflow.providers.snowflake.operators.snowflake
===============================================

.. py:module:: airflow.providers.snowflake.operators.snowflake


Classes
-------

.. autoapisummary::

   airflow.providers.snowflake.operators.snowflake.ResumableJobMixin
   airflow.providers.snowflake.operators.snowflake.SnowflakeCheckOperator
   airflow.providers.snowflake.operators.snowflake.SnowflakeValueCheckOperator
   airflow.providers.snowflake.operators.snowflake.SnowflakeIntervalCheckOperator
   airflow.providers.snowflake.operators.snowflake.SnowflakeSqlApiOperator


Module Contents
---------------

.. py:class:: ResumableJobMixin(*, durable = _DURABLE_UNSET, **kwargs)

   Airflow <3.3 stub, task_state_store unavailable, always submits fresh.


   .. py:attribute:: external_id_key
      :type:  str
      :value: 'snowflake_query_ids'



   .. py:attribute:: durable
      :value: False



   .. py:method:: execute_resumable(context)


.. py:class:: SnowflakeCheckOperator(*, sql, snowflake_conn_id = 'snowflake_default', parameters = None, warehouse = None, database = None, role = None, schema = None, authenticator = None, session_parameters = None, **kwargs)

   Bases: :py:obj:`airflow.providers.common.sql.operators.sql.SQLCheckOperator`


   Perform a check against Snowflake.

   The ``SnowflakeCheckOperator`` expects a sql query that will return a single row. Each
   value on that first row is evaluated using python ``bool`` casting. If any of the values
   return ``False`` the check is failed and errors out.

   Note that Python bool casting evals the following as ``False``:

   * ``False``
   * ``0``
   * Empty string (``""``)
   * Empty list (``[]``)
   * Empty dictionary or set (``{}``)

   Given a query like ``SELECT COUNT(*) FROM foo``, it will fail only if
   the count ``== 0``. You can craft much more complex query that could,
   for instance, check that the table has the same number of rows as
   the source table upstream, or that the count of today's partition is
   greater than yesterday's partition, or that a set of metrics are less
   than 3 standard deviation for the 7 day average.

   This operator can be used as a data quality check in your pipeline, and
   depending on where you put it in your DAG, you have the choice to
   stop the critical path, preventing from
   publishing dubious data, or on the side and receive email alerts
   without stopping the progress of the DAG.

   :param sql: the SQL code to be executed as a single string, or
       a list of str (sql statements), or a reference to a template file.
       Template references are recognized by str ending in '.sql'
   :param snowflake_conn_id: Reference to
       :ref:`Snowflake connection id<howto/connection:snowflake>`
   :param parameters: (optional) the parameters to render the SQL query with.
   :param warehouse: name of warehouse (will overwrite any warehouse
       defined in the connection's extra JSON)
   :param database: name of database (will overwrite database defined
       in connection)
   :param schema: name of schema (will overwrite schema defined in
       connection)
   :param role: name of role (will overwrite any role defined in
       connection's extra JSON)
   :param authenticator: authenticator for Snowflake.
       'snowflake' (default) to use the internal Snowflake authenticator
       'externalbrowser' to authenticate using your web browser and
       Okta, ADFS or any other SAML 2.0-compliant identify provider
       (IdP) that has been defined for your account
       'https://<your_okta_account_name>.okta.com' to authenticate
       through native Okta.
   :param session_parameters: You can set session-level parameters at
       the time you connect to Snowflake


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: template_ext
      :type:  collections.abc.Sequence[str]
      :value: ('.sql',)



   .. py:attribute:: ui_color
      :value: '#ededed'



   .. py:attribute:: conn_id_field
      :value: 'snowflake_conn_id'



   .. py:attribute:: snowflake_conn_id
      :value: 'snowflake_default'



   .. py:attribute:: query_ids
      :type:  list[str]
      :value: []



.. py:class:: SnowflakeValueCheckOperator(*, sql, pass_value, tolerance = None, snowflake_conn_id = 'snowflake_default', parameters = None, warehouse = None, database = None, role = None, schema = None, authenticator = None, session_parameters = None, **kwargs)

   Bases: :py:obj:`airflow.providers.common.sql.operators.sql.SQLValueCheckOperator`


   Performs a simple check using sql code against a specified value, within a certain level of tolerance.

   :param sql: the sql to be executed
   :param pass_value: the value to check against
   :param tolerance: (optional) the tolerance allowed to accept the query as
       passing
   :param snowflake_conn_id: Reference to
       :ref:`Snowflake connection id<howto/connection:snowflake>`
   :param autocommit: if True, each command is automatically committed.
       (default value: True)
   :param parameters: (optional) the parameters to render the SQL query with.
   :param warehouse: name of warehouse (will overwrite any warehouse
       defined in the connection's extra JSON)
   :param database: name of database (will overwrite database defined
       in connection)
   :param schema: name of schema (will overwrite schema defined in
       connection)
   :param role: name of role (will overwrite any role defined in
       connection's extra JSON)
   :param authenticator: authenticator for Snowflake.
       'snowflake' (default) to use the internal Snowflake authenticator
       'externalbrowser' to authenticate using your web browser and
       Okta, ADFS or any other SAML 2.0-compliant identify provider
       (IdP) that has been defined for your account
       'https://<your_okta_account_name>.okta.com' to authenticate
       through native Okta.
   :param session_parameters: You can set session-level parameters at
       the time you connect to Snowflake


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: conn_id_field
      :value: 'snowflake_conn_id'



   .. py:attribute:: snowflake_conn_id
      :value: 'snowflake_default'



   .. py:attribute:: query_ids
      :type:  list[str]
      :value: []



.. py:class:: SnowflakeIntervalCheckOperator(*, table, metrics_thresholds, date_filter_column = 'ds', days_back = -7, snowflake_conn_id = 'snowflake_default', warehouse = None, database = None, role = None, schema = None, authenticator = None, session_parameters = None, **kwargs)

   Bases: :py:obj:`airflow.providers.common.sql.operators.sql.SQLIntervalCheckOperator`


   Checks that the metrics given as SQL expressions are within tolerance of the ones from days_back before.

   This method constructs a query like so ::

       SELECT {metrics_threshold_dict_key} FROM {table}
       WHERE {date_filter_column}=<date>

   :param table: the table name
   :param days_back: number of days between ds and the ds we want to check
       against. Defaults to 7 days
   :param metrics_thresholds: a dictionary of ratios indexed by metrics, for
       example 'COUNT(*)': 1.5 would require a 50 percent or less difference
       between the current day, and the prior days_back.
   :param snowflake_conn_id: Reference to
       :ref:`Snowflake connection id<howto/connection:snowflake>`
   :param autocommit: if True, each command is automatically committed.
       (default value: True)
   :param parameters: (optional) the parameters to render the SQL query with.
   :param warehouse: name of warehouse (will overwrite any warehouse
       defined in the connection's extra JSON)
   :param database: name of database (will overwrite database defined
       in connection)
   :param schema: name of schema (will overwrite schema defined in
       connection)
   :param role: name of role (will overwrite any role defined in
       connection's extra JSON)
   :param authenticator: authenticator for Snowflake.
       'snowflake' (default) to use the internal Snowflake authenticator
       'externalbrowser' to authenticate using your web browser and
       Okta, ADFS or any other SAML 2.0-compliant identify provider
       (IdP) that has been defined for your account
       'https://<your_okta_account_name>.okta.com' to authenticate
       through native Okta.
   :param session_parameters: You can set session-level parameters at
       the time you connect to Snowflake


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: conn_id_field
      :value: 'snowflake_conn_id'



   .. py:attribute:: snowflake_conn_id
      :value: 'snowflake_default'



   .. py:attribute:: query_ids
      :type:  list[str]
      :value: []



.. py:class:: SnowflakeSqlApiOperator(*, snowflake_conn_id = 'snowflake_default', warehouse = None, database = None, role = None, schema = None, authenticator = None, session_parameters = None, poll_interval = 5, statement_count = 0, token_life_time = LIFETIME, token_renewal_delta = RENEWAL_DELTA, bindings = None, timeout = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), snowflake_api_retry_args = None, durable = None, **kwargs)

   Bases: :py:obj:`airflow.sdk.ResumableJobMixin`, :py:obj:`airflow.providers.common.sql.operators.sql.SQLExecuteQueryOperator`


   Implemented Snowflake SQL API Operator to support multiple SQL statements sequentially.

   This is the behavior of the SQLExecuteQueryOperator, the Snowflake SQL API allows submitting
   multiple SQL statements in a single request. It make post request to submit SQL
   statements for execution, poll to check the status of the execution of a statement. Fetch query results
   concurrently.

   The operator supports the following authentication methods via the Snowflake connection:

   - **Key pair**: provide ``private_key_file`` or ``private_key_content`` in the connection extras.
   - **OAuth**: provide ``refresh_token``, ``client_id``, and ``client_secret`` in the connection extras.
   - **Programmatic Access Token (PAT)**: set ``authenticator`` to ``programmatic_access_token`` in
     the connection extras and put the PAT value in the connection ``password`` field.

   .. seealso::

       `Snowflake SQL API Authentication <https://docs.snowflake.com/en/developer-guide/sql-api/authenticating>`_

   Where can this operator fit in?
        - To execute multiple SQL statements in a single request
        - To execute the SQL statement asynchronously and to execute standard queries and most DDL and DML statements
        - To develop custom applications and integrations that perform queries
        - To create provision users and roles, create table, etc.

   The following commands are not supported:
       - The PUT command (in Snowflake SQL)
       - The GET command (in Snowflake SQL)
       - The CALL command with stored procedures that return a table(stored procedures with the RETURNS TABLE clause).

   .. seealso::

       - `Snowflake SQL API <https://docs.snowflake.com/en/developer-guide/sql-api/intro.html#introduction-to-the-sql-api>`_
       - `API Reference <https://docs.snowflake.com/en/developer-guide/sql-api/reference.html#snowflake-sql-api-reference>`_
       - `Limitation on snowflake SQL API <https://docs.snowflake.com/en/developer-guide/sql-api/intro.html#limitations-of-the-sql-api>`_

   :param snowflake_conn_id: Reference to Snowflake connection id
   :param sql: the sql code to be executed. (templated)
   :param autocommit: if True, each command is automatically committed.
       (default value: True)
   :param parameters: (optional) the parameters to render the SQL query with.
   :param warehouse: name of warehouse (will overwrite any warehouse
       defined in the connection's extra JSON)
   :param database: name of database (will overwrite database defined
       in connection)
   :param schema: name of schema (will overwrite schema defined in
       connection)
   :param role: name of role (will overwrite any role defined in
       connection's extra JSON)
   :param authenticator: authenticator for Snowflake.
       'snowflake' (default) to use the internal Snowflake authenticator
       'externalbrowser' to authenticate using your web browser and
       Okta, ADFS or any other SAML 2.0-compliant identify provider
       (IdP) that has been defined for your account
       'https://<your_okta_account_name>.okta.com' to authenticate
       through native Okta.
   :param session_parameters: You can set session-level parameters at
       the time you connect to Snowflake
   :param poll_interval: the interval in seconds to poll the query
   :param statement_count: Number of SQL statement to be executed.
           Set to 0 to submit a variable number of SQL statements without specifying
           the exact count.
   :param token_life_time: lifetime of the JWT Token
   :param token_renewal_delta: Renewal time of the JWT Token
   :param bindings: (Optional) Values of bind variables in the SQL statement.
           When executing the statement, Snowflake replaces placeholders (? and :name) in
           the statement with these specified values.
   :param timeout: (Optional) Timeout in seconds for statement execution.
           If not set, the timeout specified by STATEMENT_TIMEOUT_IN_SECONDS is used.
           To set the timeout to the maximum value (604800 seconds), set timeout to 0.
   :param deferrable: Run operator in the deferrable mode.
   :param snowflake_api_retry_args: An optional dictionary with arguments passed to ``tenacity.Retrying`` & ``tenacity.AsyncRetrying`` classes.
   :param durable: When ``True`` (the default), the submitted statement handles are persisted to
       task state before polling begins. A worker crash on retry reconnects to the existing
       statements instead of resubmitting the SQL. Set to ``False`` to always submit fresh on
       retry. Requires Airflow 3.3+; ignored silently on earlier versions.


   .. py:attribute:: LIFETIME


   .. py:attribute:: RENEWAL_DELTA


   .. py:attribute:: external_id_key
      :value: 'snowflake_query_ids'



   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: conn_id_field
      :value: 'snowflake_conn_id'



   .. py:attribute:: snowflake_conn_id
      :value: 'snowflake_default'



   .. py:attribute:: poll_interval
      :value: 5



   .. py:attribute:: statement_count
      :value: 0



   .. py:attribute:: token_life_time


   .. py:attribute:: token_renewal_delta


   .. py:attribute:: bindings
      :value: None



   .. py:attribute:: timeout
      :value: None



   .. py:attribute:: execute_async
      :value: False



   .. py:attribute:: snowflake_api_retry_args


   .. py:attribute:: deferrable


   .. py:attribute:: query_ids
      :type:  list[str]
      :value: []



   .. py:method:: execute(context)

      Make a POST API request to snowflake by using SnowflakeSQL and execute the query to get the ids.

      By deferring the SnowflakeSqlApiTrigger class passed along with query ids.



   .. py:method:: poll_on_queries()

      Poll on requested queries.



   .. py:method:: submit_job(context)

      Submit the SQL for execution and return the resulting statement handles.



   .. py:method:: get_job_status(external_id, context)

      Aggregate the status of every handle into a single verdict for the mixin.



   .. py:method:: is_job_active(status)

      Return True if the job is still running and can be reconnected to.

      ``status`` is a raw string returned by the external system — not an Airflow enum.
      Its values are backend-specific (e.g. ``"RUNNING"``, ``"Pending"``, ``"ContainerCreating"``).



   .. py:method:: is_job_succeeded(status)

      Return True if the job completed successfully.

      ``status`` is a raw string returned by the external system — not an Airflow enum.
      Its values are backend-specific (e.g. ``"FINISHED"``, ``"Succeeded"``).



   .. py:method:: poll_until_complete(external_id, context)

      Block until the job reaches a terminal state. Raise on failure.



   .. py:method:: get_job_result(external_id, context)

      Return the job result after completion. Return None if not applicable.



   .. py:method:: execute_complete(context, event = None)

      Execute callback when the trigger fires; returns immediately.

      Relies on trigger to throw an exception, otherwise it assumes execution was successful.



   .. py:method:: on_kill()

      Cancel the running query.



